--- a/app/globals.css
+++ b/app/globals.css
@@ -4,4 +4,7 @@
 
 body {
     overflow-y: overlay;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(179, 244, 253, 1));
+
   }
+
