--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body::before {
+  content: "";
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(179, 244, 253, 1));
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Place it behind the content */
+}
+
 body {
-    overflow-y: overlay;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(179, 244, 253, 1));
-
-  }
-
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
